--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <section>
           <div class="first">
             <p>
-              Why I choose the course <span>frontend-developer</span> conducted
-              by an educational platform
+              Why I choose the course <span>frontend-developer</span> using
+              various sources of knowledge in
               <a
-                href="https://skillfactory.ru/"
-                title="Ссылка на сайт SKILLFACTORY"
+                href="https://www.google.ru"
+                title="Ссылка на сайт Google"
                 target="_blank"
               >
                 <img
-                  src="/images/SKILLFACTORY_logo.jpg"
-                  alt="SKILLFACTORY_LOGO"
-                  width="150px"
+                  src="/images/google-icon.jpg"
+                  alt="google_LOGO"
+                  width="130px"
               /></a>
             </p>
           </div>
@@ -54,7 +54,7 @@
                 profession was the main reason why I decided to choose courses
                 and undergo training.
                 <br />Among the various educational platforms and courses, I
-                liked the company SKILLFACTORY.
+                choose to study mySELF.
                 <br />
                 In my work I use the VSC code editor - design theme &nbsp<span
                   >Nu Disco Dark.</span
